Commit de Front End Inicial

--- a/Calculadora/MainPage.xaml
+++ b/Calculadora/MainPage.xaml
@@ -3,22 +3,57 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Calculadora.MainPage">
 
-    <StackLayout>
-        <Frame BackgroundColor="#2196F3" Padding="24" CornerRadius="0">
-            <Label Text="Welcome to Xamarin.Forms!" HorizontalTextAlignment="Center" TextColor="White" FontSize="36"/>
-        </Frame>
-        <Label Text="Start developing now" FontSize="Title" Padding="30,10,30,10"/>
-        <Label Text="Make changes to your XAML file and save to see your UI update in the running app with XAML Hot Reload. Give it a try!" FontSize="16" Padding="30,0,30,0"/>
-        <Label FontSize="16" Padding="30,24,30,0">
-            <Label.FormattedText>
-                <FormattedString>
-                    <FormattedString.Spans>
-                        <Span Text="Learn more at "/>
-                        <Span Text="https://aka.ms/xamarin-quickstart" FontAttributes="Bold"/>
-                    </FormattedString.Spans>
-                </FormattedString>
-            </Label.FormattedText>
-        </Label>
-    </StackLayout>
+
+    <Grid>
+
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*" ></RowDefinition>
+            <RowDefinition Height="*" ></RowDefinition>
+            <RowDefinition Height="*" ></RowDefinition>
+            <RowDefinition Height="*" ></RowDefinition>
+            <RowDefinition Height="*" ></RowDefinition>
+            <RowDefinition Height="*" ></RowDefinition>
+            <RowDefinition Height="*" ></RowDefinition>
+        </Grid.RowDefinitions>
+
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"> </ColumnDefinition>
+            <ColumnDefinition Width="*"> </ColumnDefinition>
+            <ColumnDefinition Width="*"> </ColumnDefinition>
+            <ColumnDefinition Width="*"> </ColumnDefinition>
+        </Grid.ColumnDefinitions>
+
+        <Image Source="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8d/CEUTEC_HONDURAS.png/1200px-CEUTEC_HONDURAS.png"
+               Grid.Column="0"
+               Grid.Row="0"
+               Grid.ColumnSpan="4"
+               ></Image>
+        <Label x:Name="Resultados" Text="25" BackgroundColor="Black" TextColor="White"
+               Grid.Row="1"
+               Grid.Column="0"
+               Grid.ColumnSpan="4"
+               ></Label>
+
+       <Button Text="AC" BackgroundColor="#bd6c09" TextColor="White"
+               Grid.Row="2"
+               Grid.Column="0"
+               ></Button>
+
+        <Button Text="+/-" BackgroundColor="#bd6c09" TextColor="White"
+               Grid.Row="2"
+               Grid.Column="1"
+               ></Button>
+
+        <Button Text="%" BackgroundColor="#bd6c09" TextColor="White"
+               Grid.Row="2"
+               Grid.Column="2"
+               ></Button>
+
+        <Button Text="/" BackgroundColor="#bd6c09" TextColor="White"
+               Grid.Row="2"
+               Grid.Column="2"
+               ></Button>
+
+    </Grid>
 
 </ContentPage>
